2013-01-22  Albert Chu <chu11@llnl.gov>

	* bmc-config/bmc-config.c (_bmc_config),
	ipmi-pef-config/ipmi-pef-config.c (_ipmi_pef_config),
	ipmi-chassis-config/ipmi-chassis-config.c (_ipmi_chassis_config),
	ipmi-sensors-config/ipmi-sensors-config.c (_ipmi_sensors_config):
	If only non-fatal errors occurred during operation, exit with
	status 1.  Exit with status 2 on fatal errors.

	* man/manpage-common-config-diagnostics.man: New file.

	* man/bmc-config.8.pre.in, man/ipmi-sensors-config.8.pre.in,
	man/ipmi-chassis-config.8.pre.in, man/ipmi-pef-config.8.pre.in:
	Update for changes in exit value behavior.
	
2013-01-22  Albert Chu <chu11@llnl.gov>

	* man/manpage-common-config-tool-options.man: Add clarification
	about use w/ hostranges and hostrange options.
	
2013-01-22  Albert Chu <chu11@llnl.gov>

	* common/toolcommon/pstdout.h,
	common/toolcommon/pstdout.c (pstdout_vprintf, pstdout_vfprintf):
	New functions.

	* common/configtool/config-tool-utils.h,
	common/configtool/config-tool-utils.c (config_pstdout_fprintf):
	New function.

	* common/configtool/config-tool-checkout.c,
	common/configtool/config-tool-comment.c: Call
	config_pstdout_fprintf instead of pstdout_fprintf to deal with
	corner case when user specifys filename with --filename option in
	config tools.
	
2013-01-09  Albert Chu <chu11@llnl.gov>

	Fix bugs found by static code analysis done by Redhat/Fedora.

	* ipmidetect/ipmidetect-argp.c (_read_nodes_from_stdin): Fix
	potential NUL termination corner case.

	* libfreeipmi/sel/ipmi-sel-string-intel.c (sel_string_output_intel_event_data3_discrete_oem)
	(sel_string_output_intel_event_data2_event_data3): Fix potential
	initialization bug.

	* libfreeipmi/interface/rmcp-interface.c (assemble_rmcp_pkt): Fix
	copy and paste error output.

	* libfreeipmi/api/ipmi-pef-and-alerting-cmds-api.c (ipmi_cmd_alert_immediate):
	Fix cut and paste bug.

	* libfreeipmi/api/ipmi-api.c (ipmi_ctx_destroy): Fix memset size
	bug.
